--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,6 @@
-AC_INIT(sslsniff.cpp)
-AM_INIT_AUTOMAKE(sslsniff,0.8)
+AC_INIT([sslsniff], [0.8])
+AC_CONFIG_SRCDIR([sslsniff.cpp])
+AM_INIT_AUTOMAKE([subdir-objects])
 AC_PROG_CC
 AC_PROG_CXX
 AC_PROG_INSTALL
@@ -19,4 +20,7 @@ AC_CHECK_HEADER([boost/thread.hpp],
 AC_CHECK_HEADER([openssl/ssl.h],
 	[],
 	AC_MSG_ERROR([openssl (libssl-dev) library not installed.]))
+AC_CHECK_HEADER([yara.h],
+	[],
+	AC_MSG_ERROR([yara library not installed.]))    
 AC_OUTPUT(Makefile)
